--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -63,3 +63,112 @@
    font-weight: 600;
    margin-left: 10px;
 }
+
+
+
+
+
+
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  color:white;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: flex;
+  padding:10px;
+  flex-direction: column;
+  background-color: black;
+  border-radius:10px;
+}
+.dropdown-content  a {
+  text-decoration: none !important;
+  font-size: large !important;
+}
+.active * {
+  color: black !important;
+}
+
+a.active {
+  color: grey;
+  
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* The Modal (background) */
+.mintmodal {
+  display: block; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+.none {
+  display: none;
+}
+.radio-btn-container {
+  display: flex;
+}
+
+.radio-btn {
+  margin: 10px;
+  padding: 10px;
+  border-radius: 15px;
+  background: limegreen;
+}
+.radio-btn:hover {
+  margin: 11px;
+  padding: 10px;
+  border-radius: 15px;
+  background: rgb(109, 175, 11);
+}
